--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section>
     <nav>
       <div class="logo">
-        <h1><span>S</span>neaker<span>S</span>tore</h1>
+        <h1><span>S</span>neaker <span>S</span>tore</h1>
       </div>
 
       <ul>
@@ -66,7 +66,6 @@
     </div>
   </section>
 
-  <!--Products-->
 
   <div class="products" id="Products">
     <h1>Products</h1>
@@ -273,8 +272,6 @@
       </div>
     </div>
   </div>
-
-  <!--About-->
 
   <div class="about" id="About">
     <h1>Web<span>About</span></h1>
@@ -492,7 +489,6 @@
     </div>
   </div>
 
-  <!--Services-->
 
   <div class="services" id="Servises">
     <h1>our<span>services</span></h1>
@@ -515,7 +511,6 @@
     </div>
   </div>
 
-  <!--Login Form-->
 
   <div class="login_form">
     <div class="left">
@@ -538,7 +533,7 @@
           <input type="text" name="password" placeholder="Password" />
         </div>
 
-        <p class="forget">Forget Password ?</p>
+        <p class="forget">Forgot Password ?</p>
 
         <button type="submit">Login</button>
         <div class="loging_icon">
@@ -550,15 +545,14 @@
     </div>
   </div>
 
-  <!--Footer-->
 
   <footer>
     <div class="footer_main">
       <div class="tag">
         <h1>Contact</h1>
-        <a href="#"><i class="fa-solid fa-house"></i>123/Colombo/Sri Lanka</a>
-        <a href="#"><i class="fa-solid fa-phone"></i>+94 12 345 6789</a>
-        <a href="#"><i class="fa-solid fa-envelope"></i>contact@gmail.com</a>
+        <a href="#"><i class="fa-solid fa-house"></i>56-Bhubaneswar</a>
+        <a href="#"><i class="fa-solid fa-phone"></i>+91 88 26 1189</a>
+        <a href="#"><i class="fa-solid fa-envelope"></i>KIIT@gmail.com</a>
       </div>
 
       <div class="tag">
